--- a/css/donta-smiths-ultra-awesome-site.webflow.css
+++ b/css/donta-smiths-ultra-awesome-site.webflow.css
@@ -2528,7 +2528,7 @@ h1 {
 h2 {
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #35b8be;
+  color: #AD1D07;
   font-size: 55px;
   line-height: 1;
   font-weight: 700;
@@ -2582,7 +2582,7 @@ p {
 }
 
 a {
-  color: #35b8be;
+  color: #AD1D07;
   text-decoration: underline;
 }
 
@@ -2606,7 +2606,7 @@ li {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Banner-Wave.svg');
   background-position: 0% 50%;
   background-size: contain;
@@ -2649,7 +2649,7 @@ li {
 }
 
 .nav-link.w--current {
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .navigation-container {
@@ -2765,7 +2765,7 @@ li {
   min-height: 60px;
   padding: 20px 35px;
   border-radius: 6px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -2900,7 +2900,7 @@ li {
 }
 
 .webflow-link {
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .footer-grid {
@@ -2965,7 +2965,7 @@ li {
 }
 
 .brand-span {
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .review-wrap {
@@ -3116,7 +3116,7 @@ li {
   min-width: 55px;
   padding: 13px;
   border-radius: 4px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -3149,7 +3149,7 @@ li {
   align-items: center;
   border-radius: 100px;
   box-shadow: 7px 7px 25px 0 rgba(126, 130, 143, 0.27);
-  color: #35b8be;
+  color: #AD1D07;
   font-size: 13px;
 }
 
@@ -3210,7 +3210,7 @@ li {
 }
 
 .price {
-  color: #35b8be;
+  color: #AD1D07;
   font-size: 16px;
   font-weight: 400;
 }
@@ -3257,7 +3257,7 @@ li {
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Pattern-01.svg');
   background-position: 0px 0px;
   background-size: contain;
@@ -3304,7 +3304,7 @@ li {
   -ms-flex-pack: center;
   justify-content: center;
   border-radius: 6px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -3332,7 +3332,7 @@ li {
   -ms-flex-pack: center;
   justify-content: center;
   border-radius: 4px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
 }
 
 .cart-line-item {
@@ -3392,7 +3392,7 @@ li {
 .tab-link-round.w--current {
   border-color: rgba(97, 114, 131, 0);
   border-radius: 6px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -3429,7 +3429,7 @@ li {
 }
 
 .question-title {
-  color: #35b8be;
+  color: #AD1D07;
   font-size: 18px;
   font-weight: 600;
 }
@@ -3602,7 +3602,7 @@ li {
 }
 
 .link {
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .utility-page-form {
@@ -3663,7 +3663,7 @@ li {
 }
 
 .text-block-81 {
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .required {
@@ -3674,7 +3674,7 @@ li {
   min-height: 60px;
   padding: 20px 35px;
   border-radius: 4px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -3688,7 +3688,7 @@ li {
 .button-white.button-space {
   margin-top: 40px;
   background-color: #fff;
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .content-section-bg {
@@ -3898,7 +3898,7 @@ li {
 
 .colour-block {
   height: 120px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
 }
 
 .colour-block.c8 {
@@ -3971,7 +3971,7 @@ li {
 
 .size-detail {
   margin-left: 8px;
-  color: #35b8be;
+  color: #AD1D07;
 }
 
 .strikethrough {
@@ -4012,7 +4012,7 @@ li {
   margin-left: 4px;
   padding: 10px 20px;
   border-radius: 4px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   color: #fff;
   font-size: 14px;
   font-weight: 500;
@@ -4035,7 +4035,7 @@ li {
   -ms-flex-pack: center;
   justify-content: center;
   border-radius: 6px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
 }
 
 .button-arrow-wrap {
@@ -4073,7 +4073,7 @@ li {
 
 .price-text {
   margin-top: 20px;
-  color: #35b8be;
+  color: #AD1D07;
   font-size: 22px;
   line-height: 1;
   font-weight: 600;
@@ -4123,7 +4123,7 @@ li {
   padding: 20px 35px;
   border-style: none;
   border-radius: 4px;
-  background-color: #35b8be;
+  background-color: #AD1D07;
   background-image: url('../images/Button-Wave.svg');
   background-position: 0px 0px;
   background-size: cover;
@@ -4284,7 +4284,7 @@ li {
   }
 
   .menu-button.w--open {
-    background-color: #35b8be;
+    background-color: #AD1D07;
   }
 
   .nav-menu {
