--- a/css/donta-smiths-ultra-awesome-site.webflow.css
+++ b/css/donta-smiths-ultra-awesome-site.webflow.css
@@ -2513,6 +2513,7 @@ body {
   color: #333;
   font-size: 15px;
   line-height: 20px;
+  background-color: #E4E7EB;
 }
 
 h1 {
@@ -2520,7 +2521,7 @@ h1 {
   margin-bottom: 10px;
   color: #191b22;
   font-size: 60px;
-  line-height: 1;
+  line-height: 1.15;
   font-weight: 700;
   letter-spacing: -0.03em;
 }
@@ -2530,7 +2531,7 @@ h2 {
   margin-bottom: 20px;
   color: #AD1D07;
   font-size: 55px;
-  line-height: 1;
+  line-height: 1.15;
   font-weight: 700;
   letter-spacing: -0.03em;
 }
@@ -2540,7 +2541,7 @@ h3 {
   margin-bottom: 10px;
   color: #191b22;
   font-size: 40px;
-  line-height: 1;
+  line-height: 1.15;
   font-weight: 700;
 }
 
@@ -2549,7 +2550,7 @@ h4 {
   margin-bottom: 10px;
   color: #191b22;
   font-size: 28px;
-  line-height: 1.1;
+  line-height: 1.15;
   font-weight: 700;
 }
 
@@ -2558,7 +2559,7 @@ h5 {
   margin-bottom: 10px;
   color: #08090a;
   font-size: 22px;
-  line-height: 1;
+  line-height: 1.15;
   font-weight: 700;
   letter-spacing: -0.03em;
 }
@@ -2568,7 +2569,7 @@ h6 {
   margin-bottom: 10px;
   color: #08090a;
   font-size: 20px;
-  line-height: 1;
+  line-height: 1.15;
   font-weight: 700;
   letter-spacing: -0.03em;
 }
@@ -2712,7 +2713,8 @@ li {
 }
 
 .hero-paragraph {
-  color: #546285;
+  /* color: #546285; */
+  color: #ffffff;
   font-size: 18px;
   line-height: 1.34;
   font-weight: 400;
@@ -2746,7 +2748,7 @@ li {
   display: -ms-flexbox;
   display: flex;
   width: 50%;
-  padding-right: 40px;
+  /* padding-right: 40px; */
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
@@ -2759,7 +2761,8 @@ li {
   -webkit-box-align: start;
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
-  align-items: flex-start;
+  align-items: center;
+  text-align: center;
 }
 
 .button {
@@ -2826,7 +2829,8 @@ li {
 .hero-h1 {
   max-width: 580px;
   margin-bottom: 20px;
-  color: #08090a;
+  /* color: #08090a; */
+  color: #ffffff;
   font-size: 60px;
   line-height: 1;
   letter-spacing: -0.03em;
@@ -2897,7 +2901,7 @@ li {
 }
 
 .legal {
-  color: #353448;
+  color: #546285;
 }
 
 .webflow-link {
@@ -3609,6 +3613,8 @@ li {
 
 .utility-image {
   margin-bottom: 30px;
+  width: 200px;
+  height: auto;
 }
 
 .utility-paragraph {
@@ -4200,7 +4206,7 @@ li {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-image: radial-gradient(circle farthest-corner at 50% 50%, rgba(0, 0, 0, 0.67), rgba(25, 26, 27, 0.19)), url('../images/Group-Photo.jpg');
+  background-image: radial-gradient(circle farthest-corner at 50% 50%, rgba(0, 0, 0, 0.67), rgba(25, 26, 27, 0.19)), url('../images/food-image-3.png');
   background-position: 0px 0px, 50% 50%;
   background-size: auto, cover;
   background-repeat: repeat, no-repeat;
@@ -4265,7 +4271,7 @@ li {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-    background-color: transparent;
+    /* background-color: transparent; */
   }
 
   .navigation-right {
@@ -4364,6 +4370,8 @@ li {
   .content-section {
     padding-top: 100px;
     padding-bottom: 100px;
+    /* background-image: radial-gradient(circle farthest-corner at 50% 50%, rgba(0, 0, 0, 0.67), rgba(25, 26, 27, 0.19)), url('../images/food-image-3.jpg'); */
+
   }
 
   .content-grid {
@@ -4476,6 +4484,11 @@ li {
 }
 
 @media screen and (max-width: 767px) {
+  .sticky {
+    position: sticky;
+    top: 0;
+  }
+
   .header {
     padding-bottom: 60px;
   }
@@ -4607,7 +4620,8 @@ li {
 
   .navbar {
     position: absolute;
-    background-color: hsla(0, 0%, 100%, 0);
+    /* background-color: hsla(0, 0%, 100%, 0); */
+    background-color: #ffffff
   }
 
   .header {
@@ -4992,3 +5006,36 @@ li {
 
 
 /* Custom CSS */
+
+.detail {
+  font-size: 15px;
+}
+
+.menu-container {
+  margin: 0 auto;
+  padding: 0 15px;
+  max-width: 520px;
+  width: 100%;
+  justify-content: center;
+}
+
+.menu-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.menu-items {
+  margin: 0;
+  font-weight: 600;
+}
+
+.menu-item-price {
+  font-weight: 600;
+  font-size: 1.125rem;
+}
+
+.menu-item-description {
+  margin: 1rem 0;
+}
